# orch-cloud

./: .dockerignore  .gitignore  Dockerfile  README.md  api_gateway.py  deploy.sh  pyproject.toml  requirements.txt
core/: __init__.py  agent_env.py  context_builder.py  docker_controller.py  exceptions.py  execution_router.py  git_auth.py  github_manager.py  health.py  log_parser.py  logging_config.py  main.py  memory_manager.py  models.py  orchestrator.py  repo_map.py  retry.py  run_report.py  security.py  supervisor.py  task_planner.py  test_runner.py
core/presets/: __init__.py  (+1 more)
dashboard/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.js
deploy/: agent.env.example  diagnose.sh  orchestrator-api.service  orchestrator-dashboard.service  orchestrator.env.example  setup-cursor-api-key.sh  setup-github-deploy-key.sh
docs/: API.md  ARCHITECTURE_MULTI_AGENT.md  IMPLEMENTATION_PLAN_MULTI_AGENT.md
scripts/: cursor-agent-entrypoint.sh  eval-preset.sh
server/: __init__.py  api_usage.py  app.py  auth.py  config.py  database.py  deps.py  job_service.py  middleware.py  models.py  orchestrator.py  project_service.py  schemas.py  specialist_roles.py  webhook_callback.py  worker.py
tests/: test_agent_env.py  test_analyzers.py  test_docker_agent_command.py  test_docker_controller.py  test_execute_agent.py  test_execution_router.py  test_git_auth.py  test_github_manager.py  test_job_service.py  test_memory_manager.py  test_model_routing.py  test_orchestrator_command.py  test_presets.py  test_project_auto_create.py  test_project_not_initialized.py  test_repo_map.py  test_security.py  test_settings.py  test_task_planner.py  test_test_runner.py  test_webhook_callback.py
(+47 files in other folders)
