[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyper-orchestrator"
version = "1.0.0"
description = "Self-improving multi-agent orchestration system for code tasks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "HyperOrchestrator" }]
dependencies = [
    "pydantic>=2.5.0",
    "docker>=7.0.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
hyper-orchestrator = "core.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]

[tool.ruff]
line-length = 100
target-version = "py312"
